--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -17,7 +17,7 @@
     <br><br>
 
     <!-- Enlace para cerrar sesión -->
-    <a href="{{ url_for('cerrar_sesion') }}">Cerrar Sesión</a>
+    <a href="{{ url_for('logout') }}">Cerrar sesión</a>
 
 </body>
 </html>
