--- a/templates/index.html
+++ b/templates/index.html
@@ -8,24 +8,30 @@
     <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
 </head>
 <body>
-
     <h2>Registro de Estudiante</h2>
-    <form id="registroForm" method="POST" action="{{ url_for('registro') }}">
+    <form method="POST" action="{{ url_for('registro') }}">
         <label for="nombre">Nombre:</label>
         <input type="text" id="nombre" name="nombre" required><br><br>
         
         <label for="apellido">Apellido:</label>
         <input type="text" id="apellido" name="apellido" required><br><br>
 
-        <button type="submit">Comenzar Encuesta</button>
-    </form>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required><br><br>
 
+        <label for="contraseña">Contraseña:</label>
+        <input type="password" id="contraseña" name="contraseña" required><br><br>
+
+        <button type="submit">Registrarse</button>
+    </form>
+    
     {% if preguntas %}
     <div id="encuesta">
         <h2>Encuesta de Estilo de Aprendizaje</h2>
-        <form id="encuestaForm" method="POST" action="{{ url_for('resultado') }}">
+        <form method="POST" action="{{ url_for('resultado') }}">
             <input type="hidden" name="nombre" value="{{ nombre }}">
             <input type="hidden" name="apellido" value="{{ apellido }}">
+            <input type="hidden" name="email" value="{{ email }}">
             <div id="preguntas">
                 {% for pregunta in preguntas %}
                     <p>{{ pregunta.texto }}</p>
