--- a/templates/login.html
+++ b/templates/login.html
@@ -11,7 +11,7 @@
     {% if error %}
         <p style="color: red;">{{ error }}</p>
     {% endif %}
-    <form method="POST" action="/login">
+    <form method="POST" action="{{ url_for('login') }}">
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" required><br><br>
     
@@ -20,6 +20,8 @@
     
         <button type="submit">Ingresar</button>
     </form>
+    <a href="{{ url_for('registro') }}">Registrarse</a>
+    <br><br>
     <a href="/">Volver al inicio</a>
 </body>
 </html>
