--- a/templates/registro.html
+++ b/templates/registro.html
@@ -28,5 +28,9 @@
 
         <button type="submit">Registrarse</button>
     </form>
+    
+    <a href="{{ url_for('login') }}">¿Ya tienes cuenta? Inicia sesión</a>
+    <br><br>
+    <a href="{{ url_for('home') }}">Volver al inicio</a>
 </body>
 </html>
