--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -21,5 +21,7 @@
     <!-- Enlace para cerrar sesión -->
     <a href="{{ url_for('logout') }}">Cerrar sesión</a>
 
+    <a href="{{ url_for('ver_respuestas') }}">Ver Respuestas</a>
+
 </body>
 </html>
