--- a/templates/registro.html
+++ b/templates/registro.html
@@ -17,21 +17,44 @@
         <p style="color: green;">{{ success }}</p>
     {% endif %}
     
-    <form id="registroForm" method="POST" action="{{ url_for('registro') }}">
+    <form method="POST" action="{{ url_for('registro') }}">
         <label for="nombre">Nombre:</label>
-        <input type="text" id="nombre" name="nombre" required><br><br>
-        
+        <input type="text" id="nombre" name="nombre" required><br>
+    
         <label for="apellido">Apellido:</label>
-        <input type="text" id="apellido" name="apellido" required><br><br>
-
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required><br><br>
-
+        <input type="text" id="apellido" name="apellido" required><br>
+    
+        <label for="email">Correo Electrónico:</label>
+        <input type="email" id="email" name="email" required><br>
+    
         <label for="contraseña">Contraseña:</label>
-        <input type="password" id="contraseña" name="contraseña" required><br><br>
-
-        <button type="submit">Registrarse</button>
+        <input type="password" id="contraseña" name="contraseña" required><br>
+    
+        <h3>Ingresa tus calificaciones:</h3>
+        <label for="matematicas">Matemáticas:</label>
+        <input type="number" id="matematicas" name="matematicas" min="0" max="100" required><br>
+    
+        <label for="historia">Historia:</label>
+        <input type="number" id="historia" name="historia" min="0" max="100" required><br>
+    
+        <label for="fisica">Física:</label>
+        <input type="number" id="fisica" name="fisica" min="0" max="100" required><br>
+    
+        <label for="quimica">Química:</label>
+        <input type="number" id="quimica" name="quimica" min="0" max="100" required><br>
+    
+        <label for="biologia">Biología:</label>
+        <input type="number" id="biologia" name="biologia" min="0" max="100" required><br>
+    
+        <label for="ingles">Inglés:</label>
+        <input type="number" id="ingles" name="ingles" min="0" max="100" required><br>
+    
+        <label for="geografia">Geografía:</label>
+        <input type="number" id="geografia" name="geografia" min="0" max="100" required><br>
+    
+        <button type="submit">Registrar</button>
     </form>
+    
     
     <br>
     <a href="{{ url_for('login') }}">¿Ya tienes cuenta? Inicia sesión</a>
