--- a/templates/encuesta.html
+++ b/templates/encuesta.html
@@ -16,7 +16,7 @@
             <br><br>
         {% endfor %}
     
-        <button type="submit">Guardar y Salir</button>
+        <button type="submit">Guardar Respuestas</button>
     </form>
     
     <a href="{{ url_for('dashboard') }}">Volver al Dashboard</a>
