--- a/templates/resultado.html
+++ b/templates/resultado.html
@@ -3,15 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Resultado de Estilo de Aprendizaje</title>
-</head>
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+</head> 
 <body>
-    <h2>Resultados de {{ nombre }} {{ apellido }}</h2>
 
-    <h3>📌 Estilo de aprendizaje predominante: <strong>{{ estilo }}</strong></h3>
-    
-    <h3>📊 Rendimiento Académico</h3>
-    <p><strong>Tu rendimiento general es:</strong> {{ rendimiento }}</p>
-    
-    <a href="{{ url_for('dashboard') }}">Volver al Dashboard</a>
+    <div id="resultado-container">
+        <h2>Resultados de {{ nombre }} {{ apellido }}</h2>
+        
+        <h3>📌 Estilo de aprendizaje predominante: <strong>{{ estilo }}</strong></h3>
+
+        <h3>📊 Rendimiento Académico</h3>
+        <p><strong>Tu rendimiento general es:</strong> {{ rendimiento }}</p>
+
+        <div class="botones">
+            <a href="{{ url_for('dashboard') }}"><button>Volver</button></a>
+            <a href="{{ url_for('encuesta') }}"><button>Volver a Realizar la Encuesta</button></a>
+        </div>
+    </div>
+
 </body>
 </html>
