--- a/templates/registro.html
+++ b/templates/registro.html
@@ -17,7 +17,7 @@
         <p style="color: green;">{{ success }}</p>
     {% endif %}
     
-    <form method="POST" action="{{ url_for('registro') }}">
+    <form action="{{ url_for('registro') }}" method="POST">
         <label for="nombre">Nombre:</label>
         <input type="text" id="nombre" name="nombre" required><br>
     
