--- a/templates/login.html
+++ b/templates/login.html
@@ -11,17 +11,15 @@
     {% if error %}
         <p style="color: red;">{{ error }}</p>
     {% endif %}
-    <form method="POST" action="{{ url_for('login') }}">
+    <form method="POST" action="/login">
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" required><br><br>
-    
+
         <label for="contraseña">Contraseña:</label>
         <input type="password" id="contraseña" name="contraseña" required><br><br>
-    
+
         <button type="submit">Ingresar</button>
     </form>
-    <a href="{{ url_for('registro') }}">Registrarse</a>
-    <br><br>
     <a href="/">Volver al inicio</a>
 </body>
 </html>
