--- a/templates/progreso.html
+++ b/templates/progreso.html
@@ -18,11 +18,15 @@
                 {% endfor %}
             </ul>
         {% else %}
-            <p>Aún no has completado la encuesta.</p>
+            <p>Aún no has realizado la encuesta.</p>
         {% endif %}
 
         <div class="botones">
-            <a href="{{ url_for('dashboard') }}"><button>Volver al Inicio</button></a>
+            {% if respuestas %}
+                <a href="{{ url_for('dashboard') }}"><button>Volver</button></a>
+            {% else %}
+                <a href="{{ url_for('encuesta') }}"><button>Resolver Encuesta</button></a>
+            {% endif %}
         </div>
     </div>
 
