--- a/templates/resultado.html
+++ b/templates/resultado.html
@@ -13,7 +13,7 @@
         <h3>📌 Estilo de aprendizaje predominante: <strong>{{ estilo }}</strong></h3>
 
         <h3>📊 Rendimiento Académico</h3>
-        <p><strong>Tu rendimiento general es:</strong> {{ rendimiento }}</p>
+        <p>Tu rendimiento general es: {{ promedio_rendimiento }} ({{ tipo_rendimiento }})</p>
 
         <div class="botones">
             <a href="{{ url_for('dashboard') }}"><button>Volver</button></a>
