--- a/static/estilos.css
+++ b/static/estilos.css
@@ -1,3 +1,15 @@
+
+/* Fondo para la página de bienvenida */
+body {
+    background-image: url('../static/fondo.jpg'); /* Ruta a la imagen */
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
+}
+
 /* Estilo general */
 body {
     font-family: Arial, sans-serif;
