--- a/templates/encuesta.html
+++ b/templates/encuesta.html
@@ -33,7 +33,7 @@
         <button type="submit">Guardar y Salir</button>
 
         <!-- Botón de ver resultados (deshabilitado hasta que se responda todo) -->
-        <button id="verResultados" type="button" disabled onclick="enviarResultados()">Ver Resultados</button>
+        <button id="verResultados" type="button" onclick="enviarResultados()">Ver Resultados</button>
     </form>
 
     <script>
