--- a/templates/registro.html
+++ b/templates/registro.html
@@ -30,27 +30,17 @@
         <label for="contraseña">Contraseña:</label>
         <input type="password" id="contraseña" name="contraseña" required><br>
     
-        <h3>Ingresa tus calificaciones:</h3>
-        <label for="matematicas">Matematicas:</label>
-        <input type="number" id="matematicas" name="matematicas" min="0" max="100" required><br>
+        <h3>Ingresa tu ultimo promedio:</h3>
+        <label for="ciclo_1">ciclo_1:</label>
+        <input type="number" id="ciclo_1" name="ciclo_1" min="0" max="20" required><br>
     
-        <label for="historia">Historia:</label>
-        <input type="number" id="historia" name="historia" min="0" max="100" required><br>
-    
-        <label for="fisica">Fasica:</label>
-        <input type="number" id="fisica" name="fisica" min="0" max="100" required><br>
-    
-        <label for="quimica">Quamica:</label>
-        <input type="number" id="quimica" name="quimica" min="0" max="100" required><br>
-    
-        <label for="biologia">Biologia:</label>
-        <input type="number" id="biologia" name="biologia" min="0" max="100" required><br>
-    
-        <label for="ingles">Ingles:</label>
-        <input type="number" id="ingles" name="ingles" min="0" max="100" required><br>
-    
-        <label for="geografia">Geografia:</label>
-        <input type="number" id="geografia" name="geografia" min="0" max="100" required><br>
+        <h3>Ingresa tu penultimo promedio:</h3>
+        <label for="ciclo_2">ciclo_2:</label>
+        <input type="number" id="ciclo_2" name="ciclo_2" min="0" max="20" required><br>
+
+        <h3>Ingresa tu antepenultimo promedio:</h3>
+        <label for="ciclo_3">ciclo_3:</label>
+        <input type="number" id="ciclo_3" name="ciclo_3" min="0" max="20" required><br>
     
         <button type="submit">Registrar</button>
     </form>
