--- a/templates/resultado.html
+++ b/templates/resultado.html
@@ -13,12 +13,15 @@
         <h3>📌 Estilo de aprendizaje predominante: <strong>{{ estilo }}</strong></h3>
 
         <h3>📊 Rendimiento Académico</h3>
-        {% if promedio_rendimiento != "N/A" %}
-            <p>Tu rendimiento general es: <strong>{{ promedio_rendimiento }}</strong> ({{ tipo_rendimiento }})</p>
-        {% else %}
-            <p>No se pudo calcular tu rendimiento académico.</p>
-        {% endif %}
+        <p>Tu primedio general de tus 3 ultimos ciclos es: {{ promedio_rendimiento }}</p>
+        <p>Tu escala de clasificación es: {{ tipo_rendimiento }}</p>
 
         <div class="botones">
             <a href="{{ url_for('dashboard') }}"><button>Volver</button></a>
-            <a href="{{ url_for('encuesta', pagina=1) }}"
+            <a href="{{ url_for('encuesta',pagina=ultima_pagina)}}"><button>Volver a Realizar la Encuesta</button></a>
+        </div>
+    </div>
+
+</body>
+</html>
+
