--- a/templates/imagen1.html
+++ b/templates/imagen1.html
@@ -12,7 +12,7 @@
     
     <div class="boton">
         <a href="{{ url_for('encuesta', pagina=1) }}">
-            <button>Comenzar Encuesta</button>
+            <button>Seguir encuesta</button>
         </a>
     </div>
 </body>
