--- a/templates/progreso.html
+++ b/templates/progreso.html
@@ -14,18 +14,18 @@
         {% if respuestas %}
             <ul>
                 {% for pregunta, respuesta in respuestas %}
-                    <li><strong>{{ pregunta }}</strong>: {{ "Sí" if respuesta == "+" else "No" }}</li>
+                <li><strong>{{ pregunta }}</strong>: {{ "✔ Sí" if respuesta == "+" else "❌ No" }}</li>
                 {% endfor %}
             </ul>
         {% else %}
-            <p>Aún no has realizado la encuesta.</p>
+            <p>Aún no has terminado la encuesta.</p>
         {% endif %}
 
         <div class="botones">
             {% if respuestas %}
                 <a href="{{ url_for('dashboard') }}"><button>Volver</button></a>
             {% else %}
-                <a href="{{ url_for('encuesta') }}"><button>Resolver Encuesta</button></a>
+            <a href="{{ url_for('encuesta', pagina=1) }}"><button>Resolver Encuesta</button></a>
             {% endif %}
         </div>
     </div>
