--- a/templates/imagen4.html
+++ b/templates/imagen4.html
@@ -11,9 +11,7 @@
     </div>
     
     <div class="boton">
-        <a href="{{ url_for('encuesta', pagina=4) }}">
-            <button>Seguir encuesta</button>
-        </a>
+        <a href="{{ url_for('encuesta', pagina=4) }}"><button>Seguir encuesta</button></a>
     </div>
 </body>
 </html>
